--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>
-        we are learning git and git github.
+        i are learning git and git github
+        sad not working
     </h1>
 
     
